# plate_recognition

./: .gitignore  CMakeLists.txt  package.xml
launch/: plate_reconigiton.launch
ros_node/: extract for_proj3.ipynb  image_lidar_align.py  image_processor.py  image_processor_proj3.py  image_processor_proj5.py  upload.py
tools/: detect_main.py  detect_plate.py  rsu_data_uploader.py
torch2trt/: main.py
